[gd_scene load_steps=5 format=3 uid="uid://8gim7dabpts8"]

[ext_resource type="Script" path="res://Textbox.gd" id="1_ejd3j"]
[ext_resource type="FontFile" uid="uid://brn61jh7cwgm7" path="res://Nintendo-DS-BIOS.ttf" id="2_2anjp"]
[ext_resource type="AudioStream" uid="uid://cx8jy18073t73" path="res://sounds/textsfx.ogg" id="3_ce1xf"]
[ext_resource type="AudioStream" uid="uid://c1fyqnwitutdq" path="res://sounds/misc/wup.mp3" id="4_eqjnk"]

[node name="Textbox" type="Node2D"]
script = ExtResource("1_ejd3j")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 192.0
offset_bottom = 60.0
color = Color(0, 0, 0, 0.643137)

[node name="Label" type="Label" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 184.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("2_2anjp")
theme_override_font_sizes/font_size = 15
autowrap_mode = 2
visible_characters = 0
visible_ratio = 0.0

[node name="Timer" type="Timer" parent="."]

[node name="TextSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ce1xf")
bus = &"SoundFX"

[node name="BoxSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_eqjnk")
bus = &"SoundFX"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
